# tork2018_violet_demo

./: CMakeLists.txt  README.md  package.xml  rviz_config.rviz
config/: segment_params.yaml  violet_config.yaml
launch/: bag_play.launch  violet.launch
scripts/: play_bag_file.sh
