cmake_minimum_required(VERSION 2.8.3)
project(tork2018_violet_demo)

# Find catkin packages
find_package(catkin REQUIRED COMPONENTS)

# Define this project as a catkin package
catkin_package()

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(${catkin_INCLUDE_DIRS})
