<?xml version="1.0"?>
<package format="2">
  <name>tork2018_violet_demo</name>
  <version>0.0.1</version>
  <description>TORK 2018 Airlab Violet Demo Launch Package</description>

  <maintainer email="air@cs.itu.edu.tr">AIRLab</maintainer>
  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>violet</exec_depend>
  <exec_depend>airlab_segment</exec_depend>
</package>
